--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@vanilla-extract/css": "^1.17.4",
+        "@solidjs/router": "^0.15.3",
         "solid-js": "^1.9.7"
     },
     "devDependencies": {
